--- a/pong.css
+++ b/pong.css
@@ -9,13 +9,18 @@ body {
     background-color: black;
     border-top: 5px solid yellow;
     border-bottom: 5px solid yellow;
-  z-index: 5;
 
-
+    position:absolute; 
+    top:0;bottom:0;right:0;left:0; 
+    margin:auto;
 
 }
 
-
+#wrapper { 
+    width:100%; 
+    height:100vh; 
+    position:relative; 
+} 
 
 
 
